Update 500 error page

--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>This page is unavailable (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     .grid-row:after, #content:after {
@@ -446,13 +446,9 @@
           <div class="dialog">
             <p><a href="/">Home</a></p>
             <hr />
-            <h1>Sorry but the page you were trying to view does not exist.</h1>
-            <p>It looks like this was the result of either:</p>
-            <ul>
-              <li>a mistyped address</li>
-              <li>an out-of-date link</li>
-            </ul>
-            <p><a href="/">Go back to the Digital Workspace home page</a></p>
+            <h1>This page is unavailable</h1>
+            <p>We are experiencing technical problems. Try again in a few moments.</p>
+            <p>If you're still having trouble getting access <a href="mailto:digitalworkspace@digital.trade.gov.uk">let us know</a>.</p>
           </div>
         </div>
       </div>
