add maintenance mode - `touch maintenance.txt` in the root to activate

--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -46,23 +46,16 @@
     </div>
     <!--end global-header-bar-->
     <main id='page-container' role='main'>
-      <div class="phase-banner phase-banner-beta">
-        <p>
-        <strong class="phase-tag">BETA</strong>
-        <span>This is a new service -
-          <a href="https://docs.google.com/a/digital.justice.gov.uk/forms/d/1dJ9xQ66QFvk8K7raf60W4ZXfK4yTQ1U3EeO4OLLlq88/viewform">your feedback</a>
-        will help us to improve it.</span>
-        </p>
-      </div>
       <div id="wrapper" class="group live">
         <section id="content" role="main">
           <header class="page-header group">
             <h1>Maintenance in progress</h1>
           </header>
           <section class="confirmation">
-            <p class="lead">We're doing some planned work to improve People Finder for you.</p>
+            <p class="lead">This service will be down for essential maintenance on Thursday 20 February. The site will likely resume service after business hours, but some users may still be unable to access it for around 24 hours afterwards.
+Please contact us on people-finder-support@digital.justice.gov.uk if you continue to experience issues after this time. </p>
             <p class="lead">Come back in a few minutes.</p>
-            <p class="lead"><a href="/">Return to home page</a></p>
+            <p class="lead">Apologies for the inconvenience.</p>
           </section>
         </section>
       </div>
