--- a/public/403.html
+++ b/public/403.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Error - 500 - Internal server error - People Finder</title>
+        <title>Error - 403 - Forbidden - People Finder</title>
 
         <link rel="stylesheet" media="all" href="/assets/application.css" />
-        <link href="/assets/govuk-template.css" media="screen" rel="stylesheet" /><!--<![endif]-->
+        <link href="/assets/govuk-template.css" media="screen" rel="stylesheet" />
         <link href="/assets/govuk-template-print.css" media="print" rel="stylesheet" />
         <link href="/assets/fonts.css" media="all" rel="stylesheet" />
 
@@ -44,9 +44,9 @@
                 <div id="wrapper" class="group live">
                     <section id="content" role="main">
                         <header class="page-header group">
-                            <h1 class="heading-xlarge">Sorry, there is a problem with the service</h1>
+                            <h1 class="heading-xlarge">Sorry, you are not authorised to view this page</h1>
                         </header>
-                        <p>Please contact<br><a href="mailto:people-finder-support@digital.justice.gov.uk?subject=500 error report">people-finder-support@digital.justice.gov.uk</a> with the details to report this issue.</p>
+                        <p>Please contact<br><a href="mailto:people-finder-support@digital.justice.gov.uk?subject=403 error report">people-finder-support@digital.justice.gov.uk</a> with the details on how you got here to report this issue.</p>
                     </section>
                 </div>
 
@@ -72,6 +72,7 @@
         </footer>
 
         <div id="global-app-error" class="app-error hidden"></div>
+
         <script>
             (function (i, s, o, g, r, a, m) {
               i['GoogleAnalyticsObject'] = r;
@@ -85,7 +86,6 @@
             })
             (window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
             ga('create', 'UA-53656606-1', 'auto');
-            ga('send', 'pageview');
-        </script>
+            ga('send', 'pageview');</script>
     </body>
 </html>
