--- a/public/nginx/505.html
+++ b/public/nginx/505.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Error - 500 - Internal server error - People Finder</title>
+        <title>Error - 505 - Service unavailable - People Finder</title>
 
         <link rel="stylesheet" media="all" href="/assets/application.css" />
         <link href="/assets/govuk-template.css" media="screen" rel="stylesheet" /><!--<![endif]-->
@@ -44,7 +44,7 @@
                 <div id="wrapper" class="group live">
                     <section id="content" role="main">
                         <header class="page-header group">
-                            <h1 class="heading-xlarge">Sorry, there is a problem with the service</h1>
+                            <h1 class="heading-xlarge">Sorry, the service is unavailable</h1>
                         </header>
                         <p>Please contact<br><a href="mailto:people-finder-support@digital.justice.gov.uk?subject=500 error report">people-finder-support@digital.justice.gov.uk</a> with the details to report this issue.</p>
                     </section>
