CDPT-215 Setup GA4 and keep GA3 running

--- a/public/404.html
+++ b/public/404.html
@@ -11,6 +11,13 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:image" content="/assets/opengraph-image.png">
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-MRLL6W5');</script>
+        <!-- End Google Tag Manager -->
     </head>
 
     <body class="controller-sessions">
@@ -74,20 +81,6 @@
         </footer>
 
         <div id="global-app-error" class="app-error hidden"></div>
-        <script>
-            (function (i, s, o, g, r, a, m) {
-              i['GoogleAnalyticsObject'] = r;
-              i[r] = i[r] || function () {
-                        (i[r].q = i[r].q || []).push(arguments)
-                      }, i[r].l = 1 * new Date();
-              a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-              a.async = 1;
-              a.src = g;
-              m.parentNode.insertBefore(a, m)
-            })
-            (window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-            ga('create', 'UA-53656606-1', 'auto');
-            ga('send', 'pageview');
-        </script>
+        
     </body>
 </html>
