Use static files

--- a/public/500.html
+++ b/public/500.html
@@ -8,7 +8,7 @@
         <link href="/assets/govuk-template.css" media="screen" rel="stylesheet" /><!--<![endif]-->
         <link href="/assets/govuk-template-print.css" media="print" rel="stylesheet" />
         <link href="/assets/fonts.css" media="all" rel="stylesheet" />
-        <link href="/assets/govuk-frontend/dist/govuk/govuk-frontend.min.css" rel="stylesheet" />
+        <link href="/assets/govuk-frontend.min.css" rel="stylesheet" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:image" content="/assets/opengraph-image.png">
