--- a/public/408.html
+++ b/public/408.html
@@ -33,7 +33,7 @@
             <div class="header-wrapper">
               <div class="govuk-header__container govuk-width-container">
                 <div class="govuk-header__logo">
-                  <a href="#" class="govuk-header__link govuk-header__link--homepage">
+                  <a href="/" class="govuk-header__link govuk-header__link--homepage">
                     <svg
                       focusable="false"
                       role="img"
